--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 #Data Source Properties
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://100.67.30.142:3306/exam_db?useSSL=false&createDatabaseIfNotExist=true
-spring.datasource.username=dobrin_r
-spring.datasource.password=D0brin-r
+spring.datasource.username=********
+spring.datasource.password=********
 #JPA Properties
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MariaDBDialect
 spring.jpa.properties.hibernate.format_sql=TRUE
