--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,16 @@
 #Data Source Properties
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://********/exam_db?useSSL=false&createDatabaseIfNotExist=true
-spring.datasource.username=********
-spring.datasource.password=********
+spring.datasource.url=jdbc:mysql://localhost:3306/football_info?allowPublicKeyRetrieval=true&useSSL=false&createDatabaseIfNotExist=true&serverTimezone=UTC
+spring.datasource.username=dobrin_r
+spring.datasource.password=12345
 #JPA Properties
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MariaDBDialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.properties.hibernate.format_sql=TRUE
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.open-in-view=false
-
-#server.port=8000
+###Logging Levels
+# Disable the default loggers
+logging.level.org=WARN
+logging.level.blog=WARN
+#Show SQL executed with parameter bindings
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor=TRACE
